# fmi-course-oe-project

./: dummy.txt  load_existing.py  main.py  pos_tagging.ipynb  pyproject.toml
