[project]
name = "fmi-course-oe-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "pip>=26.0",
    "torch>=2.10.0",
    "transformers[torch]>=5.0.0",
]
